ValidatingWebhookConfiguration.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-ca
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"cert-manager.io/inject-ca-from-secret":"cert-manager/cert-manager-webhook-ca"},"labels":{"app":"webhook","app.kubernetes.io/component":"webhook","app.kubernetes.io/instance":"cert-manager","app.kubernetes.io/name":"webhook","app.kubernetes.io/version":"v1.6.1"},"name":"cert-manager-webhook"},"webhooks":[{"admissionReviewVersions":["v1","v1beta1"],"clientConfig":{"service":{ [...]
    creationTimestamp: "2020-12-11T13:42:15Z"
    generation: 4
    labels:
      app: webhook
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: webhook
      app.kubernetes.io/version: v1.6.1
    name: cert-manager-webhook
    resourceVersion: "77081668"
    selfLink: /apis/admissionregistration.k8s.io/v1/validatingwebhookconfigurations/cert-manager-webhook
    uid: 42a8dcc3-472c-4238-9a66-16a4f1307f09
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3VENDQVVpZ0F3SUJBZ0lSQU5TT1ZTdEx4NUlwNmR3bG1tT0U4eU13Q2dZSUtvWkl6ajBFQXdNd0lqRWcKTUI0R0ExVUVBeE1YWTJWeWRDMXRZVzVoWjJWeUxYZGxZbWh2YjJzdFkyRXdIaGNOTWpFd09ERXhNakUwTWpJeApXaGNOTWpJd09ERXhNakUwTWpJeFdqQWlNU0F3SGdZRFZRUURFeGRqWlhKMExXMWhibUZuWlhJdGQyVmlhRzl2CmF5MWpZVEIyTUJBR0J5cUdTTTQ5QWdFR0JTdUJCQUFpQTJJQUJJY2plUVg0R3VqTzd2VWZiaEJYMytOM3FFQTkKdWY3YW5MWm13bS9NckUxcm1wcWo2RG95ZlRITEhuNE44bHVOTTJkMktQT1drbS94UTUrampwZ1gxUnJqWnRhbgpZZ0FqWUdleCtZ [...]
      service:
        name: cert-manager-webhook
        namespace: cert-manager
        path: /validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: webhook.cert-manager.io
    namespaceSelector:
      matchExpressions:
      - key: cert-manager.io/disable-validation
        operator: NotIn
        values:
        - "true"
      - key: name
        operator: NotIn
        values:
        - cert-manager
    objectSelector: {}
    rules:
    - apiGroups:
      - cert-manager.io
      - acme.cert-manager.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - '*/*'
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: nginx-ingress
      meta.helm.sh/release-namespace: ingress-nginx
    creationTimestamp: "2020-12-09T03:18:20Z"
    generation: 2
    labels:
      app.kubernetes.io/component: admission-webhook
      app.kubernetes.io/instance: nginx-ingress
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/version: 0.32.0
      helm.sh/chart: ingress-nginx-2.1.0
    name: nginx-ingress-ingress-nginx-admission
    resourceVersion: "947828"
    selfLink: /apis/admissionregistration.k8s.io/v1/validatingwebhookconfigurations/nginx-ingress-ingress-nginx-admission
    uid: a5e60702-bb9e-4d85-9ccc-74b8acb47a97
  webhooks:
  - admissionReviewVersions:
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJPVENCMzZBREFnRUNBaEVBK0g4Y1hudzRqWi9kSEpvZkNDSEE2VEFLQmdncWhrak9QUVFEQWpBQU1DQVgKRFRJd01USXdPVEF6TVRNeE9Gb1lEekl4TWpBeE1URTFNRE14TXpFNFdqQUFNRmt3RXdZSEtvWkl6ajBDQVFZSQpLb1pJemowREFRY0RRZ0FFVDl3b0ZMVCtPRzlCdlJnUTFGczNHZzRnb3poVEhQN2dFQ013eUlrN3E0TUN1L2NTCkhOOFMrRWRuQ2tKMmRZSW9lZGd1TTVEVWJVc0hqZ05tY2VxZVpLTTRNRFl3RGdZRFZSMFBBUUgvQkFRREFnSUUKTUJNR0ExVWRKUVFNTUFvR0NDc0dBUVVGQndNQk1BOEdBMVVkRXdFQi93UUZNQU1CQWY4d0NnWUlLb1pJemowRQpBd0lEU1FBd1Jn [...]
      service:
        name: nginx-ingress-ingress-nginx-controller-admission
        namespace: ingress-nginx
        path: /extensions/v1beta1/ingresses
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: validate.nginx.ingress.kubernetes.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - extensions
      - networking.k8s.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
      scope: '*'
    sideEffects: Unknown
    timeoutSeconds: 30
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: prometheus-operator
      meta.helm.sh/release-namespace: prometheus-operator
    creationTimestamp: "2020-12-06T15:09:09Z"
    generation: 2
    labels:
      app: prometheus-operator-admission
      app.kubernetes.io/managed-by: Helm
      chart: prometheus-operator-9.3.0
      heritage: Helm
      release: prometheus-operator
    name: prometheus-operator-admission
    resourceVersion: "564839"
    selfLink: /apis/admissionregistration.k8s.io/v1/validatingwebhookconfigurations/prometheus-operator-admission
    uid: 4db5064d-0f73-4964-98af-494435bf6175
  webhooks:
  - admissionReviewVersions:
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJPRENCM3FBREFnRUNBaEJjU2Ezc0R0VklWQ1BIWnFRNHpvaXlNQW9HQ0NxR1NNNDlCQU1DTUFBd0lCY04KTWpBeE1qQTJNVFV3TkRBMVdoZ1BNakV5TURFeE1USXhOVEEwTURWYU1BQXdXVEFUQmdjcWhrak9QUUlCQmdncQpoa2pPUFFNQkJ3TkNBQVJkWGluRXRVeDhSTm11UHdIYkVLQWtNN2xuZVljelFhV1NVV2IwaGpoaHNkMkRRSklsCi9HVjJOcHlYV2xjWDJuMm15K0habTBlazRESkNQTk85SnI0Sm96Z3dOakFPQmdOVkhROEJBZjhFQkFNQ0FnUXcKRXdZRFZSMGxCQXd3Q2dZSUt3WUJCUVVIQXdFd0R3WURWUjBUQVFIL0JBVXdBd0VCL3pBS0JnZ3Foa2pPUFFRRApBZ05KQURCR0Fp [...]
      service:
        name: prometheus-operator-operator
        namespace: prometheus-operator
        path: /admission-prometheusrules/validate
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: prometheusrulemutate.monitoring.coreos.com
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - monitoring.coreos.com
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - prometheusrules
      scope: '*'
    sideEffects: Unknown
    timeoutSeconds: 30
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
